<resources>
    <string name="app_name">JJDraw</string>
    <string name="start_new">New</string>
    <string name="colors">Colors</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="insert">Insert</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
    <string name="aboutString">Release 1.0</string>
    <string name="exitButton">Exit</string>
    <string name="aboutButton">About</string>
    <string name="who">Pham Trong Duyen.</string>
    <string name="license">License</string>
    <string name="licenseString">Released under the MIT License.</string>
    <string name="SueSmith">Framework based on Sue Smith\'s </string>

    <string name="github">Sourcecode available on </string>

</resources>
