<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutString"
        android:id="@+id/aboutText"
        android:layout_marginTop="34dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="#FF33B5E5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/who"
        android:id="@+id/whoText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/licenseString"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/SueSmith" />

    <TextView
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/github" />


</LinearLayout>