<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/brush_size"
		android:text="Choose Size"
		android:textColor="#FF33B5E5"
		android:textSize="25dp"/>

	<View
		android:layout_width="wrap_content"
		android:layout_height="2dip"
		android:background="#FF33B5E5"/>
    <ImageButton
    	android:id="@+id/small_brush"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:contentDescription="@string/sml"
    	android:src="@drawable/small" />
 
   	<ImageButton
    	android:id="@+id/medium_brush"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:contentDescription="@string/med"
    	android:src="@drawable/medium" />
 
	<ImageButton
    	android:id="@+id/large_brush"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:contentDescription="@string/lrg"
    	android:src="@drawable/large" />
 
</LinearLayout>
